<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>uk.gov.nhs.digital.telehealth</groupId>
	<artifactId>MediPi</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>MediPi</name>
	<url>http://maven.apache.org</url>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.glassfish.hk2.external</groupId>
			<artifactId>cglib</artifactId>
			<version>2.2.0-b21</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>14.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.hk2</groupId>
			<artifactId>hk2-locator</artifactId>
			<version>2.2.0-b21</version>
		</dependency>
		<dependency>
			<groupId>javax.json</groupId>
			<artifactId>javax.json-api</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>javax.ws.rs</groupId>
			<artifactId>javax.ws.rs-api</artifactId>
			<version>2.0</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-client</artifactId>
			<version>2.5.1</version>
		</dependency>
		<dependency>
			<groupId>org.rxtx</groupId>
			<artifactId>rxtx</artifactId>
			<version>2.1.7</version>
		</dependency>
		<dependency>
			<groupId>javax.usb</groupId>
			<artifactId>javax-usb</artifactId>
			<version>1.0.0</version>
		</dependency>

		<!-- Non-Maven Dependencies: START -->
		<dependency>
			<groupId>uk.gov.nhs.digital.telehealth</groupId>
			<artifactId>DistributionEnvelopeTools</artifactId>
			<version>0.0.1</version>
		</dependency>
		<dependency>
			<groupId>uk.gov.nhs.digital.telehealth</groupId>
			<artifactId>extfx-0.3</artifactId>
			<version>0.0.1</version>
		</dependency>
		<dependency>
			<groupId>uk.gov.nhs.digital.telehealth</groupId>
			<artifactId>jfxmessagebox</artifactId>
			<version>1.1.0</version>
		</dependency>
		<dependency>
			<groupId>uk.gov.nhs.digital.telehealth</groupId>
			<artifactId>SpineTools</artifactId>
			<version>0.0.1</version>
		</dependency>
		<!-- Non-Maven Dependencies: END -->
	</dependencies>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<fork>true</fork>
					<meminitial>128m</meminitial>
					<maxmem>2048m</maxmem>
					<argLine>-Xmx256m -XX:MaxPermSize=512m</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<executions>
					<execution>
						<id>hack-binary-DistributionEnvelopeTools</id>
						<phase>pre-clean</phase>
						<configuration>
							<groupId>uk.gov.nhs.digital.telehealth</groupId>
							<artifactId>DistributionEnvelopeTools</artifactId>
							<version>0.0.1</version>
							<file>${project.basedir}/lib/DistributionEnvelopeTools.jar</file>
							<repositoryLayout>default</repositoryLayout>
							<packaging>jar</packaging>
							<generatePom>true</generatePom>
						</configuration>
						<goals>
							<goal>install-file</goal>
						</goals>
					</execution>
					<execution>
						<id>hack-binary-extfx</id>
						<phase>pre-clean</phase>
						<configuration>
							<groupId>uk.gov.nhs.digital.telehealth</groupId>
							<artifactId>extfx-0.3</artifactId>
							<version>0.0.1</version>
							<file>${project.basedir}/lib/extfx-0.3.jar</file>
							<repositoryLayout>default</repositoryLayout>
							<packaging>jar</packaging>
							<generatePom>true</generatePom>
						</configuration>
						<goals>
							<goal>install-file</goal>
						</goals>
					</execution>
					<execution>
						<id>hack-binary-jfxmessagebox</id>
						<phase>pre-clean</phase>
						<configuration>
							<groupId>uk.gov.nhs.digital.telehealth</groupId>
							<artifactId>jfxmessagebox</artifactId>
							<version>1.1.0</version>
							<file>${project.basedir}/lib/jfxmessagebox-1.1.0.jar</file>
							<repositoryLayout>default</repositoryLayout>
							<packaging>jar</packaging>
							<generatePom>true</generatePom>
						</configuration>
						<goals>
							<goal>install-file</goal>
						</goals>
					</execution>
					<execution>
						<id>hack-binary-SpineTools</id>
						<phase>pre-clean</phase>
						<configuration>
							<groupId>uk.gov.nhs.digital.telehealth</groupId>
							<artifactId>SpineTools</artifactId>
							<version>0.0.1</version>
							<file>${project.basedir}/lib/SpineTools.jar</file>
							<repositoryLayout>default</repositoryLayout>
							<packaging>jar</packaging>
							<generatePom>true</generatePom>
						</configuration>
						<goals>
							<goal>install-file</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<finalName>MediPi</finalName>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<archive>
						<manifest>
							<mainClass>org.medipi.MediPi</mainClass>
						</manifest>
					</archive>
					<appendAssemblyId>false</appendAssemblyId>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>